# job-interview-ft

./: Dockerfile  pyproject.toml
.github/workflows/: build_container.yaml
app/: main.py  schemas.py
