[project]
name = "finatext"
version = "0.1.0"
description = ""
authors = [
    {name = "Hiroaki Takao",email = "tk04m9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "fastapi (>=0.115.13,<0.116.0)"
]

[tool.poetry]
name = "finatext"
version = "0.1.0"
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-asyncio = "^1.0.0"
httpx = "^0.28.1"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "app"
]
#testpaths = ["tests"]